--- a/src/components/scss/SearchBar.scss
+++ b/src/components/scss/SearchBar.scss
@@ -5,7 +5,7 @@
   box-shadow: var(--secondary-box-shadow);
   border: 1px solid var(--input-border-color);
   display: flex;
-  padding: 14px;
+  padding: 12px;
   align-items: center;
   margin: 10px auto;
 
